// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (geleverd) 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="_ThemaIcon_2fc54d"
          fill="black"
          focusable="false"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <polygon
            id="Path"
            points="14 25 18 25 18 21 22 21 22 17 18 17 18 13 14 13 14 17 10 17 10 21 14 21"
          />
          <path
            d="M25,6 L25,0 L7,0 L7,6 L0,6 L0,32 L32,32 L32,6 L25,6 Z M11,4 L21,4 L21,6 L11,6 L11,4 Z M28,28 L4,28 L4,10 L28,10 L28,28 Z"
            id="Shape"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_3b337d"
          href="/"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Terug
          </span>
        </a>
        <h2
          class="ams-heading ams-heading--level-1"
        >
          Hulp bij het huishouden (geleverd)
        </h2>
      </div>
    </header>
    <div
      class="ams-screen ams-screen--wide ams-mb--lg"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <dl
            class="_Datalist_08bf39"
          >
            <dt
              class="_Datalist__title_08bf39"
            >
              Aanbieder
            </dt>
            <dd
              class="_Datalist__description_08bf39"
            >
              Emile Thuiszorg
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="ams-grid"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-all"
      >
        <div
          class="_StatusLine_a12ff2"
        >
          <h4
            class="ams-heading ams-heading--level-4 _ListHeading_a12ff2"
          >
            Status
          </h4>
          <ul
            class="_List_a12ff2"
          >
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Status aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--start-checked_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Besluit
                  </strong>
                  <time
                    class="_StatusDate_a12ff2"
                  >
                    15 januari 2022
                  </time>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    
              
                    <p>
                      
                U heeft recht op hulp bij het huishouden (geleverd) per 15 december 2021.
              
                    </p>
                    
              
                    <p>
                      
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                      <u>
                        hoe u van aanbieder kunt wisselen.
                      </u>
                      
                  
              
                    </p>
                    
            
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                >
                  <span
                    class="_altDocumentContent_a12ff2"
                  >
                    <p>
                      
            
                      <strong>
                        
              U krijgt dit besluit per post.
            
                      </strong>
                      
          
                    </p>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Huidige status, aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--middle-checked-next_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Levering gestart
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (geleverd).
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Toekomstige status, nog niet aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Levering gestopt
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Niet van toepassing.
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Toekomstige status, nog niet aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--end_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Einde recht
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Uw recht op hulp bij het huishouden (geleverd) is beëindigd per 
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (gestopt) 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="_ThemaIcon_2fc54d"
          fill="black"
          focusable="false"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <polygon
            id="Path"
            points="14 25 18 25 18 21 22 21 22 17 18 17 18 13 14 13 14 17 10 17 10 21 14 21"
          />
          <path
            d="M25,6 L25,0 L7,0 L7,6 L0,6 L0,32 L32,32 L32,6 L25,6 Z M11,4 L21,4 L21,6 L11,6 L11,4 Z M28,28 L4,28 L4,10 L28,10 L28,28 Z"
            id="Shape"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_3b337d"
          href="/"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Terug
          </span>
        </a>
        <h2
          class="ams-heading ams-heading--level-1"
        >
          Hulp bij het huishouden (gestopt)
        </h2>
      </div>
    </header>
    <div
      class="ams-screen ams-screen--wide ams-mb--lg"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <dl
            class="_Datalist_08bf39"
          >
            <dt
              class="_Datalist__title_08bf39"
            >
              Aanbieder
            </dt>
            <dd
              class="_Datalist__description_08bf39"
            >
              Emile Thuiszorg
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="ams-grid"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-all"
      >
        <div
          class="_StatusLine_a12ff2"
        >
          <h4
            class="ams-heading ams-heading--level-4 _ListHeading_a12ff2"
          >
            Status
          </h4>
          <ul
            class="_List_a12ff2"
          >
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Status aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--start-checked_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Besluit
                  </strong>
                  <time
                    class="_StatusDate_a12ff2"
                  >
                    15 januari 2022
                  </time>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    
              
                    <p>
                      
                U heeft recht op hulp bij het huishouden (gestopt) per 15 december 2021.
              
                    </p>
                    
              
                    <p>
                      
                In de brief leest u ook hoe u bezwaar kunt maken of een klacht kan
              indienen.
              
                    </p>
                    
            
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                >
                  <span
                    class="_altDocumentContent_a12ff2"
                  >
                    <p>
                      
            
                      <strong>
                        
              U heeft dit besluit per post ontvangen.
            
                      </strong>
                      
          
                    </p>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Status aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--checked_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Levering gestart
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (gestopt).
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Status aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--checked_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Levering gestopt
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Emile Thuiszorg heeft aan ons doorgegeven dat u geen hulp bij het huishouden (gestopt)
            meer krijgt.
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
            <li
              class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Huidige status, aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--end-active_a12ff2 _ConnectLine--end_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--active_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Einde recht
                  </strong>
                  <time
                    class="_StatusDate_a12ff2"
                  >
                    22 januari 2022
                  </time>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Uw recht op hulp bij het huishouden (gestopt) is beëindigd per 22 januari 2022
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (nog niet geleverd) 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="_ThemaIcon_2fc54d"
          fill="black"
          focusable="false"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <polygon
            id="Path"
            points="14 25 18 25 18 21 22 21 22 17 18 17 18 13 14 13 14 17 10 17 10 21 14 21"
          />
          <path
            d="M25,6 L25,0 L7,0 L7,6 L0,6 L0,32 L32,32 L32,6 L25,6 Z M11,4 L21,4 L21,6 L11,6 L11,4 Z M28,28 L4,28 L4,10 L28,10 L28,28 Z"
            id="Shape"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_3b337d"
          href="/"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Terug
          </span>
        </a>
        <h2
          class="ams-heading ams-heading--level-1"
        >
          Hulp bij het huishouden (nog niet geleverd)
        </h2>
      </div>
    </header>
    <div
      class="ams-screen ams-screen--wide ams-mb--lg"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <dl
            class="_Datalist_08bf39"
          >
            <dt
              class="_Datalist__title_08bf39"
            >
              Aanbieder
            </dt>
            <dd
              class="_Datalist__description_08bf39"
            >
              Emile Thuiszorg
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="ams-grid"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-all"
      >
        <div
          class="_StatusLine_a12ff2"
        >
          <h4
            class="ams-heading ams-heading--level-4 _ListHeading_a12ff2"
          >
            Status
          </h4>
          <ul
            class="_List_a12ff2"
          >
            <li
              class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Huidige status, aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--start_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Besluit
                  </strong>
                  <time
                    class="_StatusDate_a12ff2"
                  >
                    15 januari 2022
                  </time>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    
              
                    <p>
                      
                U heeft recht op hulp bij het huishouden (nog niet geleverd) per 15 januari 2022.
              
                    </p>
                    
              
                    <p>
                      
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                      <u>
                        hoe u van aanbieder kunt wisselen.
                      </u>
                      
                  
              
                    </p>
                    
            
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                >
                  <span
                    class="_altDocumentContent_a12ff2"
                  >
                    <p>
                      
            
                      <strong>
                        
              U krijgt dit besluit per post.
            
                      </strong>
                      
          
                    </p>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Toekomstige status, nog niet aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Levering gestart
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (nog niet geleverd).
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Toekomstige status, nog niet aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Levering gestopt
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Niet van toepassing.
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Toekomstige status, nog niet aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--end_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Einde recht
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Uw recht op hulp bij het huishouden (nog niet geleverd) is beëindigd per 
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (tijdelijk gestopt) 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="_ThemaIcon_2fc54d"
          fill="black"
          focusable="false"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <polygon
            id="Path"
            points="14 25 18 25 18 21 22 21 22 17 18 17 18 13 14 13 14 17 10 17 10 21 14 21"
          />
          <path
            d="M25,6 L25,0 L7,0 L7,6 L0,6 L0,32 L32,32 L32,6 L25,6 Z M11,4 L21,4 L21,6 L11,6 L11,4 Z M28,28 L4,28 L4,10 L28,10 L28,28 Z"
            id="Shape"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_3b337d"
          href="/"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Terug
          </span>
        </a>
        <h2
          class="ams-heading ams-heading--level-1"
        >
          Hulp bij het huishouden (tijdelijk gestopt)
        </h2>
      </div>
    </header>
    <div
      class="ams-screen ams-screen--wide ams-mb--lg"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <dl
            class="_Datalist_08bf39"
          >
            <dt
              class="_Datalist__title_08bf39"
            >
              Aanbieder
            </dt>
            <dd
              class="_Datalist__description_08bf39"
            >
              Emile Thuiszorg
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="ams-grid"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-all"
      >
        <div
          class="_StatusLine_a12ff2"
        >
          <h4
            class="ams-heading ams-heading--level-4 _ListHeading_a12ff2"
          >
            Status
          </h4>
          <ul
            class="_List_a12ff2"
          >
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Status aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--start-checked_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Besluit
                  </strong>
                  <time
                    class="_StatusDate_a12ff2"
                  >
                    15 januari 2022
                  </time>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    
              
                    <p>
                      
                U heeft recht op hulp bij het huishouden (tijdelijk gestopt) per 15 december 2021.
              
                    </p>
                    
              
                    <p>
                      
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                      <u>
                        hoe u van aanbieder kunt wisselen.
                      </u>
                      
                  
              
                    </p>
                    
            
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                >
                  <span
                    class="_altDocumentContent_a12ff2"
                  >
                    <p>
                      
            
                      <strong>
                        
              U krijgt dit besluit per post.
            
                      </strong>
                      
          
                    </p>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Status aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--checked_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Levering gestart
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (tijdelijk gestopt).
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
            <li
              class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Huidige status, aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--middle-checked-next_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Levering gestopt
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Niet van toepassing.
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
            <li
              class="_ListItem_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Toekomstige status, nog niet aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_ConnectLine_a12ff2 _ConnectLine--end_a12ff2"
                  />
                  <span
                    class="_Checkmark_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Einde recht
                  </strong>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    <p>
                      
            Uw recht op hulp bij het huishouden (tijdelijk gestopt) is beëindigd per 
          
                    </p>
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Wmo item 1 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="_ThemaIcon_2fc54d"
          fill="black"
          focusable="false"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <polygon
            id="Path"
            points="14 25 18 25 18 21 22 21 22 17 18 17 18 13 14 13 14 17 10 17 10 21 14 21"
          />
          <path
            d="M25,6 L25,0 L7,0 L7,6 L0,6 L0,32 L32,32 L32,6 L25,6 Z M11,4 L21,4 L21,6 L11,6 L11,4 Z M28,28 L4,28 L4,10 L28,10 L28,28 Z"
            id="Shape"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_3b337d"
          href="/"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Terug
          </span>
        </a>
        <h2
          class="ams-heading ams-heading--level-1"
        >
          Wmo item 1
        </h2>
      </div>
    </header>
    <div
      class="ams-screen ams-screen--wide ams-mb--lg"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-all"
        >
          <dl
            class="_Datalist_08bf39"
          >
            <dt
              class="_Datalist__title_08bf39"
            >
              Aanbieder
            </dt>
            <dd
              class="_Datalist__description_08bf39"
            >
              Mantelzorg B.V
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="ams-grid"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-all"
      >
        <div
          class="_StatusLine_a12ff2"
        >
          <h4
            class="ams-heading ams-heading--level-4 _ListHeading_a12ff2"
          >
            Status
          </h4>
          <ul
            class="_List_a12ff2"
          >
            <li
              class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
            >
              <div
                class="_ListItemInner_a12ff2"
              >
                <div
                  aria-label="Huidige status, aangevinkt."
                  class="_StatusConnection_a12ff2"
                >
                  <span
                    class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
                  />
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--status_a12ff2"
                >
                  <strong
                    class="_StatusTitle_a12ff2"
                  >
                    Levering gestart
                  </strong>
                  <time
                    class="_StatusDate_a12ff2"
                  >
                    24 juli 2020
                  </time>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--description_a12ff2"
                >
                  <div
                    class="_PanelContent_a12ff2"
                  >
                    De levering van uw thuizorg is gestart
                  </div>
                </div>
                <div
                  class="_Panel_a12ff2 _Panel--documents_a12ff2"
                />
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
